// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to bottom button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_bottom_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Scroll to bottom",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Opacity": 1,
            "Size": [
              151.99996948242188,
              28.999969482421875,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          151.99996948242188,
          28.999969482421875,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "scroll_to_bottom_button",
    "Opacity": 1,
    "Size": [
      840,
      43.000030517578125,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to end button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_end_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Scroll to end",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Opacity": 1,
            "Size": [
              118.00003051757812,
              28.999969482421875,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          118.00003051757812,
          28.999969482421875,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "scroll_to_end_button",
    "Opacity": 1,
    "Size": [
      840,
      43.000030517578125,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to start button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_start_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Scroll to start",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Opacity": 1,
            "Size": [
              124.00003051757812,
              29.00006103515625,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          124.00003051757812,
          29.00006103515625,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "scroll_to_start_button",
    "Opacity": 1,
    "Size": [
      840,
      42.99993896484375,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to top button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_top_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Scroll to top",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Opacity": 1,
            "Size": [
              114,
              28.999969482421875,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          114,
          28.999969482421875,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "scroll_to_top_button",
    "Opacity": 1,
    "Size": [
      840,
      43.000030517578125,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ScrollView Tests ScrollViews has flash scroll indicators 1`] = `
{
  "Automation Tree": {
    "AutomationId": "flash_scroll_indicators_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Flash scroll indicators",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Opacity": 1,
            "Size": [
              198,
              29.00006103515625,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          198,
          29.00006103515625,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "flash_scroll_indicators_button",
    "Opacity": 1,
    "Size": [
      840,
      42.99993896484375,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;
